fix: z-index do menu hamburguer

--- a/style-en.css
+++ b/style-en.css
@@ -194,14 +194,10 @@ header p {
     color: var(--second-color);
 }
 
-/* .contact-btn::before {
+.contact-btn::before {
     content: '';
     background: #1c4fae;
     position: absolute;
-    /* top: 0px; */
-    /* right: 0; */
-    /* bottom: 0; */
-    /* left: -17px; */
     width: 178px;
     height: 168px;
     border-radius: 77px;
@@ -212,7 +208,7 @@ header p {
 
 .contact-btn:hover::before {
     transform: translate(-50%, -50%);
-} */
+}
 
 /* .contact-btn:hover p {
     color: #fafafa;
@@ -254,7 +250,7 @@ header p {
     position: relative;
     cursor: pointer;
     display: none;
-    z-index: 1;
+    z-index: 6;
 }
 
 .menu-options {
@@ -266,7 +262,7 @@ header p {
     right: -1px;
     transform: translateX(110%);
     transition: .5s cubic-bezier(.64,.38,.67,1);
-    z-index: 0;
+    z-index: 5;
     display: none;
     flex-direction: column;
     align-items: start;
